# roboVision

./: .gitignore  README.md
actions_ev3/: CMakeLists.txt  package.xml
bringup/: package.xml  setup.py
bringup/config/: camera_info.yaml  ekf.yaml  gazebo_bridge.yaml
bringup/launch/: _diff_drive.launch.py  camera.launch.py  diff_drive.launch.py  image_proc.launch.py  legobot.launch.py  main.launch.py  rviz.launch.py  simulation.launch.py  simulation_spawn.launch.py
camera_images/: package.xml  setup.py
camera_images/camera_images/: camera_info_publisher.py  camera_subscriber.py  webcam_publisher.py
camera_images/launch/: camera.launch.py
description/: CMakeLists.txt  package.xml  ros2_control.xml
description/config/: legobot.rviz  legobot_controllers.yaml
description/hooks/: description.sh.in
description/include/description/: legobot_system.hpp
description/launch/: legobot.launch.py
description/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
description/models/aws_robomaker_residential_BalconyTable_01/: model.sdf
description/models/aws_robomaker_residential_Ball_01/: model.sdf
description/models/aws_robomaker_residential_Carpet_01/: model.sdf
description/models/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
description/models/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
description/models/aws_robomaker_residential_DeskPortraitB_02/: model.sdf
description/models/aws_robomaker_residential_DeskPortraitC_01/: model.sdf
description/models/aws_robomaker_residential_DeskPortraitD_01/: model.sdf
description/models/aws_robomaker_residential_DeskPortraitD_04/: model.sdf
description/models/aws_robomaker_residential_Dumbbell_01/: model.sdf
description/models/aws_robomaker_residential_FitnessEquipment_01/: model.sdf
description/models/aws_robomaker_residential_FloorB_01/: model.sdf
description/models/aws_robomaker_residential_FoldingDoor_01/: model.sdf
description/models/aws_robomaker_residential_FoldingDoor_02/: model.sdf
description/models/aws_robomaker_residential_KitchenTable_01/: model.sdf
description/models/aws_robomaker_residential_LightC_01/: model.sdf
description/models/aws_robomaker_residential_Pillow_01/: model.sdf
description/models/aws_robomaker_residential_PortraitA_01/: model.sdf
description/models/aws_robomaker_residential_PortraitA_02/: model.sdf
description/models/aws_robomaker_residential_PortraitC_01/: model.sdf
description/models/aws_robomaker_residential_PortraitE_01/: model.sdf
description/models/aws_robomaker_residential_PortraitE_02/: model.sdf
description/models/aws_robomaker_residential_Quilt_01/: model.sdf
description/models/aws_robomaker_residential_Rangehood_01/: model.sdf
description/models/aws_robomaker_residential_Refrigerator_01/: model.sdf
description/models/aws_robomaker_residential_RoomCeiling_01/: model.sdf
description/models/aws_robomaker_residential_RoomWindow_01/: model.sdf
description/models/aws_robomaker_residential_ShoeRack_01/: model.sdf
description/models/aws_robomaker_residential_SofaB_01/: model.sdf
description/models/aws_robomaker_residential_SofaC_01/: model.sdf
description/models/aws_robomaker_residential_Sofa_01/: model.sdf
description/models/aws_robomaker_residential_TV_01/: model.sdf
description/models/aws_robomaker_residential_Tablet_01/: model.sdf
description/models/aws_robomaker_residential_Trash_01/: model.sdf
description/models/aws_robomaker_residential_Wardrobe_01/: model.sdf
description/models/diff_drive/: gazebo.xacro  model.sdf  model.urdf  model.xacro
description/models/legobot/: legobot.xacro  legobot_with_controllers.xacro
description/models/rrbot/: model.config
description/src/: legobot_system.cpp
description/worlds/: small_house.world
gz_description/: CMakeLists.txt  gz_ros2_control.xml  package.xml
gz_description/include/gz_description/: gz_legobot_system.hpp
gz_description/launch/: legobot.launch.py
gz_description/models/legobot/: gazebo.xacro
gz_description/src/: gz_legobot_system.cpp
im_publisher/: CHANGELOG.rst  CMakeLists.txt  package.xml
im_publisher/doc/: components.rst
im_publisher/include/im_publisher/: im_publisher.hpp  visibility.h
im_publisher/launch/: image_publisher_file.launch.py  image_publisher_mono.launch.py  image_publisher_stereo.launch.py
im_publisher/src/: im_publisher.cpp  im_publisher_node.cpp
mqtt_communication/: package.xml  setup.py
mqtt_communication/config/: bridge.params.yaml
mqtt_communication/launch/: mqtt.launch.py
ros2_numpy/ros2_numpy/: __init__.py
simulation/: CMakeLists.txt  package.xml
simulation/launch/: simulation.launch.py
simulation/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
simulation/models/aws_robomaker_residential_Bed_01/: model.sdf
simulation/models/aws_robomaker_residential_Board_01/: model.sdf
simulation/models/aws_robomaker_residential_ChairA_01/: model.sdf
simulation/models/aws_robomaker_residential_ChairD_01/: model.sdf
simulation/models/aws_robomaker_residential_Chandelier_01/: model.sdf
simulation/models/aws_robomaker_residential_CookingBench_01/: model.sdf
simulation/models/aws_robomaker_residential_Curtain_01/: model.sdf
simulation/models/aws_robomaker_residential_DeskPortraitB_01/: model.sdf
simulation/models/aws_robomaker_residential_DeskPortraitC_02/: model.sdf
simulation/models/aws_robomaker_residential_DeskPortraitD_02/: model.sdf
simulation/models/aws_robomaker_residential_DeskPortraitD_03/: model.sdf
simulation/models/aws_robomaker_residential_Door_01/: model.sdf
simulation/models/aws_robomaker_residential_Handle_01/: model.sdf
simulation/models/aws_robomaker_residential_HouseWallB_01/: model.sdf
simulation/models/aws_robomaker_residential_RoomWall_01/: model.sdf
voice_commands/: package.xml  setup.py
voice_commands/config/: alexa-skill-config.yaml  alexa-skill-intents.json
voice_commands/launch/: alexa.launch.py
voice_commands/voice_commands/: alexa_interface.py
yolo/: package.xml  setup.py
yolo/yolo/: test.py  train.py  yolo_detector.py
(+15 files in other folders)
