<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_images</name>
  <version>0.0.0</version>
  <description>everything to deal with camera images</description>
  <maintainer email="catundertheleaf@gmail.com">Anastasiia</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_opencv</exec_depend>

<!-- python dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <!-- <exec_depend>image_tools</exec_depend> -->
  <exec_depend>image_pipeline</exec_depend>
  <!-- <exec_depend>camera_info_manager</exec_depend> -->
  <exec_depend>image_common</exec_depend>
  <!-- <exec_depend>image_transport</exec_depend> -->
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
